--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   /* --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255; */
-  /* color-scheme: light; */
+  color-scheme: dark;
   font-family: "Poppins",sans-serif;
 }
 
